style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

/* Element Selectors */
html, body {
  height: 100%;
}

html, body, footer, footer a {
  width: 100%;
  font-family: 'Poppins', sans-serif;
}

/* Class Selectors */

/* aboutgroups (events) */
.card-text {
  font-size: 14pt;
}

/* front page carousel images */
.carousel-inner img {
  width: 100%;
  height: 100%;
}

/* front page carousel caption */
.carousel-caption {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

/* colour of text on hover (my groups page) */
.clickableDiv a:hover {
  text-decoration:none;
  color: #d8d8d8;
}

/* colour of text (my groups page) */
.clickableDiv a {
  color: #f2f2f2;
}

/* style of each groups div (my groups page) */
.clickableDiv {
  border: 1px solid rgba(255, 255, 255, 0.3);
  border-radius: 6px;
  padding-top: 5px;
  margin-bottom: 7px;
  width: 100%;
}

/* size of 'join group' button on aboutgroups page */
.createjoin {
  width: 180px;
}

.divBorder {
  border: 1px solid rgba(255, 255, 255, 0.25);
  border-radius: 6px;
  background: rgba(255, 255, 255, 0.15);
  
}

/* three icons on front page,  */
.icons {
  width: 50%;
}

/* background divs */
.loggedInBG {
  background: url("img/loggedin/sky.jpg");
  background-size: cover;
  height: 82%;
}

/* background for createjoin page */
.masthead {
  height: 82%;
  width: 100%;
  background: url("img/createjoin/background.jpg");
  background-position: center center;
  background-size: cover;
}

.modal-content {
  background: #1A75C1;
  color: #FFF;
  
}
.modaluserpw {
  margin-bottom: 20px;
  width: 100%
}
.loginmodal-submit {
  background: #FFF;
  color: #1A75C1;
  width: 70%;
}
.c {
  align-content: center;
  margin-bottom: 10px;
  width: 70%;
  
}

.modaluserpw {
  width: 100%;
}


/* links in navbar */
.nav-link {
  font-size: 1.1em;
  text-align: right;
}

/* offsets the navbar when 'about' is clicked */
.navbarOffset {
  top: -130px;
  position: relative;
}

.oneliner {
  width: 80%;
}

/* registration page bg */
.registerBG {
  background: url("img/loggedin/sky.jpg");
  background-size: cover;
}
/* colors for sign in button in nav bar */
.signin {
  background-color: #FFF;
  color: #1A75C1;
}

/* background color for site footer */
.site-footer {
  background: #273443;
  color: white;
}

/* site footer links */
.site-footer a {
  color: #D5D5D5;
  text-decoration:none;
}
/* hover on site footer links  */
.site-footer a:hover {
  color: white;
}

/* colour for buttons (most pages) */
.submitButton {
  background-color: #1A75C1;
}

/* colour of title text for most pages */
.title {
  color: #F6F6F6;
}


/* copyright in footer */
#copyright {
  background-color: #232F3C;
}

/* images on mygroups page */
img.mr-2 {
  width: 100px;
  height: 100px;
  border: 1px solid #8c8c8c;
}

/* ID Selectors */

/* content of mygroups page */
#content {
  font-size: 12pt;
  color: #F6F6F6;
}

/* title of main div containers */
#main {
  font-size: 20pt;
}

/* smaller text bodies of main div containers */
#maintext {
  color: #F6F6F6;
  font-size: 14pt;
}

/*---Media Queries --*/
@media (max-width: 992px) {

}
@media (max-width: 768px) {
  .navbar-brand {
    width: 60%;
  }
  .navbar-brand img {
    width: 100%;
  }

}


@media (max-width: 576px) {

  /* hides carousel captions */
  .carousel-caption h1, .carousel-caption h3 {
    display: none;
  }

  /* card title to smaller size (home page, aboutgroup) */
  .card-title {
    font-size: 14pt;
  }

  /* title for createjoin page */
  .createheading {
    display: none;
  }

  /* used to center text */
  .textcenter{
    text-align: center;
  }

  .greyBG {
    background-color: #e9ecef;
  }

}




#ele {
  position: relative;
  left: 100%;
  top: 800px;
  width: 500px;
  height: 500px;
  z-index: 1;
}

#A{
  display: none;
  position:absolute;
  z-index: 1;
	left:-5%; /* Set initial position for each image off-screen left -- adjust according to image width */
	animation:mymove 8s infinite;	/* total animation time for each image is 8 seconds, loops forever */
	animation-direction:normal;	
	animation-delay:0s;
	-webkit-animation-delay: 0s;
}

@keyframes mymove
	{
	from {left:-5%;}	/*off-screen left (adjust for image width)*/
	to {left:100%;}		/*off-screen right*/
	}

